simplify sensor read

--- a/_posts/2015-07-13-sensors.md
+++ b/_posts/2015-07-13-sensors.md
@@ -79,6 +79,21 @@ Sensor sensor = getSensor("COMPASS");
 float currentOrientation = sensor.readValues()[0];
 ```
 
+However, there is another method to help you with that, called `float readValue(int index)`,
+that does the same as reading the array of values and then getting that Specific index:
+
+```java
+// Before:
+float someValue = sensor.readValues()[0];
+
+// After:
+float someValue = sensor.readValue(0);
+
+// Reading the Ball angle/distance:
+float ballAngle = getSensor("BALL").readValue(0);
+float ballDist = getSensor("BALL").readValue(1);
+```
+
 Specific documentation for each robot is available on the Menu.
 
 ### Noise and Imprecisions
